2001-06-21  Shawn Betts  <sabetts@van.gobasis.com>

	* nethack-menu.el (nethack-menu-create-item): insert a space after
	the checkbox widget.

	* nethack-api.el (nethack-api-exit-nhwindows): returns 'void.

	* nethack-menu.el (nethack-menu-add-item): add the item to the end
	of the list.
	(nethack-menu-create-item): only buttonize items with positive
	id's.

2001-05-06  shawn  <sabetts@diggin.lamenet.tmp>

	* nethack-menu.el (nethack-menu-options): new defvar
	(nethack-menu-widgets): likewise
	(nethack-menu-how): likewise
	(nethack-menu-mode-map): likewise
	(nethack-menu-add-item): new function
	(nethack-menu-create-item): likewise
	(nethack-menu-draw): likewise
	(nethack-menu-get-choices): likewise
	(nethack-menu-submit): likewise

	* nethack.el (nethack-menu): require nethack-menu
	(nethack-create-buffer): kill-all-local-variables on the buffer

	* nethack-api.el (nethack-api-start-menu): initialize some
	internal menu variables
	(nethack-api-add-menu): call nethack-menu-add-item
	(nethack-api-end-menu): do nothing
	(nethack-api-select-menu): call nethack-menu-draw

2000-09-26  Shawn  <sabetts@vcn.bc.ca>

	* nethack.el (nethack-process-command-list): The filter can now
	handle globs of nethack lisp commands.

2000-09-25  Shawn  <sabetts@vcn.bc.ca>

	* nethack-apix.el: In player selection, doesn't ask the user if
	there is only one choice.

	* nethack-api.el (nethack-api-yn-function): implemented.

	* nethack-cmd.el: Added the rest of the movement commands

2000-09-19  Ryan yeske  <rcyeske@van.gobasis.com>

	* nethack-api.el (nethack-api-get-command): renamed from
	nethack-api-getch and rewrote.

2000-09-11  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el (nethack-handle-command): Renamed from
	nethack-handle-key and rewritten in preparation for the removal of
	nethack-api-getch in favour of nethack-get-command.
	(nethack-waiting-for-command-flag): renamed from
	nethack-waiting-for-key-p.
	(nethack-command-queue): renamed from nethack-key-queue.